Changes in Shorewall 4.3.10

1) Fix handling of shared optional providers.

2) Add WIDE_TC_MARKS option.

Changes in Shorewall 4.3.9

1) Logging rules now create separate chain.

2) Fix netmask genereation in tcfilters.

3) Allow Shorewall6 with kernel 2.6.24

4) Avoid 'Invalid BROADCAST address' errors.

5) Allow Shorewall6 on kernel 4.2.24:Shorewall/changelog.txt

6) Add IP, TC and IPSET options in shorewall.conf and shorewall6.conf.

7) Add IPMARK support

Changes in Shorewall 4.3.8

1) Apply Tuomo Soini's patch for USE_DEFAULT_RT.

2) Use 'startup_error' for those errors caught early.

3) Fix swping

4) Detect gateway via dhclient leases file.

5) Suppress leading whitespace on certain continuation lines.

6) Use iptables[6]-restore to stop the firewall.

7) Add AUTOMAKE option

8) Remove SAME support.

9) Allow 'compile' without a pathname.

10) Fix LOG_MARTIANS=Yes.

11) Adapt I. Buijs's hashlimit patch.

Changes in Shorewall 4.3.7

1)  Fix forward treatment of interface options.

2)  Replace $VARDIR/.restore with $VARDIR/firewall

3)  Fix DNAT- parsing of DEST column.

4)  Implement dynamic zones

5)  Allow 'HOST' options on bridge ports.

6)  Deprecate old macro parameter syntax.

Changes in Shorewall 4.3.6

1)  Add SAME tcrules target.

2)  Make 'dump' display the raw table. Fix shorewall6 dump anomalies.

3)  Fix split_list1()

4)  Fix Shorewall6 file location bugs.

Changes in Shorewall 4.3.5

1)  Remove support for shorewall-shell.

2)  Combine shorewall-common and shorewall-perl to product shorewall.

3)  Add nets= OPTION in interfaces file.

4)  Add SAME MARK/CLASSIFY target

