@@ -4,6 +4,8 @@ Changes in Shorewall 4.3.10
 
 2) Add WIDE_TC_MARKS option.
 
+3) Allow compile to STDOUT.
+
 Changes in Shorewall 4.3.9
 
 1) Logging rules now create separate chain.
